--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/CSS/dashboard.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="%PUBLIC_URL%/CSS/barraDataTable.css">
 
   </head>
   <body>
