--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <title>Laboratorios Inmedica</title>
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/CSS/bosststrap.min.css.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/CSS/barraDataTable.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/CSS/index.css" rel="stylesheet">
     <link href="%PUBLIC_URL%/CSS/all.min.css" rel="stylesheet"/>
     <script src="%PUBLIC_URL%/js/bootstrap.bundle.min.js"></script>
